# runNburn

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
crates/rnb-backend/cuda/: Cargo.toml  build.rs
crates/rnb-backend/cuda/cuda/: nemotron_selected.cu  persistent_decode.cu  q4k_gemv.cu
crates/rnb-backend/cuda/src/: dynlib.rs  lib.rs  runtime.rs  tuning.rs
crates/rnb-backend/metal/: Cargo.toml
crates/rnb-backend/metal/src/: attn_chain.rs  attn_decode.metal  attn_decode_gqa.metal  attn_decode_i8.metal  attn_decode_i8_splitk.metal  attn_decode_splitk.metal  compute.rs  delta_net_scan_ar.metal  delta_net_scan_chunk.metal  delta_net_scan_chunk_step45gemm.metal  delta_net_step.metal  device.rs  ffn_chain.rs  gate_apply.metal  gated_proj_chain.rs  gdn_alpha_beta.metal  gdn_chain.rs  gdn_conv_delta_chain.rs  gdn_delta_norm_silu.metal  gdn_proj_chain.rs  gemm_dense_f16_microbench.metal  gemm_q4k.metal  gemm_q4k_shared.metal  gemm_q6k.metal  gemm_q6k_shared.metal  gemm_tensorops_poc.metal  gemv_bcol.metal  gemv_f32.metal  gemv_q2k_simd.metal  gemv_q3k_simd.metal  gemv_q4k.metal  gemv_q4k_coalesced.metal  gemv_q4k_coalesced_nsg2.metal  gemv_q4k_simd.metal  gemv_q5k.metal  gemv_q5k_coalesced.metal  gemv_q5k_mla_slots.metal  gemv_q5k_simd.metal  gemv_q6k.metal  gemv_q6k_coalesced.metal  (+37 more)
crates/rnb-backend/vulkan/: Cargo.toml
crates/rnb-backend/vulkan/examples/: dump_attn_decode.rs
crates/rnb-backend/vulkan/src/: context.rs  full_path.rs  gemv.rs  kv_resident.rs  layer_gemv.rs  lib.rs  per_kv_shard.rs  pipeline.rs  runtime.rs  staging.rs  weight_cache.rs
crates/rnb-backend/vulkan/tests/: embed_lookup_self_test.rs  full_path_shapes.rs  kv_append_self_test.rs  kv_resident_layout.rs  logit_argmax_self_test.rs  spirv_tests.rs  staging_policy.rs
crates/rnb-cli/: Cargo.toml
crates/rnb-cli/src/: chat.rs  main.rs  runtime_boundary.rs
crates/rnb-cli/src/server/: generation.rs  http.rs  lifecycle.rs  mod.rs  response_config.rs  response_input.rs  response_output.rs  response_output_tests.rs  responses.rs  session_store.rs  structured.rs  types.rs  worker.rs
crates/rnb-cpu/: Cargo.toml
crates/rnb-cpu/benches/: gemm_bench.rs
crates/rnb-cpu/src/: lib.rs
crates/rnb-cpu/src/gemm/: activation_q8.rs  avx2_dot.rs  dequant.rs  f32_gemv.rs  mod.rs  moe_section.rs  neon_dot.rs  neon_moe.rs  neon_quant.rs  neon_repacked.rs  pack_q4k.rs  pack_q5k.rs  pack_q6k.rs  pack_q8_0_pair.rs  policy.rs  q2k_gate_up.rs  quant_gemv.rs  quantized_packing.rs  repack.rs  shadow_tile_q2k.rs  tile_q4k.rs  tile_q5k.rs  tile_q6k.rs
crates/rnb-cpu/src/kernels/: activation.rs  conv.rs  delta_net.rs  elementwise.rs  matmul.rs  mod.rs  norm.rs  rope.rs  shape.rs
crates/rnb-cpu/src/quantize/: blocks.rs  dequant.rs  iq.rs  kvarn.rs  mod.rs  moe_blocks.rs  moe_convert.rs  quant.rs
crates/rnb-cpu/tests/: integration.rs
crates/rnb-ffi/: Cargo.toml
crates/rnb-ffi/include/: rnb.h
crates/rnb-ffi/src/: lib.rs  test_ffi.rs
crates/rnb-llm/: Cargo.toml
crates/rnb-llm/src/: auto_drafter.rs  chat.rs  constrained.rs  draft_stepper.rs  engine.rs  error.rs  external_drafter.rs  generate.rs  kv_cache.rs  lib.rs  mtp_generate.rs  runtime.rs  runtime_boundary_tests.rs  speculative.rs  tool_call.rs
crates/rnb-llm/src/engine/: backend_runtime.rs  debug.rs  decode.rs  decode_attention_compute.rs  decode_attention_output.rs  decode_attention_post_qkv.rs  decode_attention_qkv.rs  decode_attention_residual.rs  decode_attention_rope.rs  decode_attention_verify.rs  decode_attn_prewarm.rs  decode_ffn.rs  decode_ffn_dispatch.rs  decode_gdn.rs  decode_gpu.rs  decode_inference.rs  decode_layer_graph.rs  dense_dispatch.rs  dequant.rs  forward.rs  forward_gdn.rs  gemv_profile.rs  inference.rs  init.rs  kv_share.rs  layer_weights.rs  layout.rs  load_profile.rs  logits.rs  mediatek_ffn.rs  model_init.rs  models.rs  moe.rs  moe_jit.rs  moe_profile.rs  moe_routing.rs  moe_section.rs  moe_section_dispatch.rs  moe_section_layout.rs  moe_shadow_dispatch.rs  (+25 more)
crates/rnb-llm/src/kv_cache/: kvarn.rs
crates/rnb-llm/src/runtime/: boundary_tests.rs
crates/rnb-llm/src/sampler/: greedy.rs  min_p.rs  mirostat.rs  mod.rs  repetition.rs  temperature.rs  top_k.rs  top_p.rs
crates/rnb-llm/src/tokenizer/: bpe.rs  mod.rs  vocab.rs
crates/rnb-llm/tests/: auto_drafter_test.rs  external_drafter_runtime_test.rs  external_drafter_smoke_test.rs  kv_borrow_test.rs  shared_kv_states_test.rs  standalone_rejection.rs
crates/rnb-loader/: Cargo.toml
crates/rnb-loader/src/: convert.rs  error.rs  lib.rs  mtp_sidecar.rs  packed.rs  rnb_file.rs  rnb_moe_reader.rs
crates/rnb-loader/src/arch/: gemma.rs  llama.rs  mod.rs  phi.rs
crates/rnb-loader/src/cache/: key.rs  lookup.rs  mod.rs
crates/rnb-loader/src/gguf/: metadata.rs  mod.rs  parser.rs  sharded.rs  types.rs
crates/rnb-loader/src/sidecar_v3/: decoder.rs  mod.rs  spec.rs
crates/rnb-loader/tests/: integration_test.rs
crates/rnb-mtp/: Cargo.toml
crates/rnb-mtp/src/: kv_share.rs  lib.rs  verify.rs
crates/rnb-mtp/src/drafter/: backbone.rs  calibrate.rs  cuda.rs  dequant.rs  loader.rs  mod.rs  shared_kv.rs  types.rs  vq_head.rs
crates/rnb-mtp/tests/: drafter_backbone_calibrate_test.rs  drafter_backbone_test.rs  drafter_calibrate_test.rs  drafter_cross_attention_test.rs  drafter_loader_test.rs  drafter_metadata_test.rs
crates/rnb-runtime/: Cargo.toml
crates/rnb-runtime/src/: backend.rs  cpu_phase.rs  device_prefill.rs  lib.rs  mediatek.rs  metal_inference.rs  packed_weights.rs  policy.rs  session.rs
crates/rnb-runtime/src/backend/: execution.rs  gpu.rs  moe_jit.rs  registry.rs
crates/rnb-runtime/src/cuda_inference/: cuda.rs
crates/rnb-runtime/src/policy/: base.rs  debug.rs  gemma.rs  general.rs  kvarn.rs  memory.rs  moe.rs  session_cache.rs
crates/rnb-runtime/src/vulkan_inference/: gpu.rs
crates/rnb-tools/convert/: Cargo.toml
crates/rnb-tools/convert/src/: arch_filter.rs  lib.rs
crates/rnb-tools/convert/tests/: moe_decode_section_roundtrip.rs
crates/rnb-tools/dev-cli/: Cargo.toml
crates/rnb-tools/dev-cli/src/: lib.rs  mtk_gguf_mlp.rs  q4_operator_microbench.rs  (+1 more)
(+318 files in other folders)
