[package]
name = "rnb-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rnb-core = { path = "../rnb-core" }
half = "2"
rayon = "1"
memmap2 = "0.9"
tempfile = "3"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "gemm_bench"
harness = false
