[package]
name = "rnb-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cpu = ["rnb-runtime/cpu"]
vulkan = ["rnb-runtime/vulkan"]
cuda = ["rnb-runtime/cuda", "rnb-mtp/cuda"]
opencl = ["rnb-runtime/opencl"]
metal = ["rnb-runtime/metal"]
mediatek = ["rnb-runtime/mediatek"]

[dependencies]
rnb-core = { path = "../rnb-core" }
rnb-loader = { path = "../rnb-loader" }
rnb-model-nemotron = { path = "../rnb-models/nemotron" }
rnb-model-qwen = { path = "../rnb-models/qwen" }
rnb-mtp = { path = "../rnb-mtp" }
rnb-runtime = { path = "../rnb-runtime", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
half = "2"
rayon = "1"
memmap2 = "0.9"
tempfile = "3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2", features = ["json"] }
llguidance = { version = "1.7", default-features = false, features = ["ahash", "lark", "referencing"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
[dev-dependencies]
approx = "0.5"
parking_lot = "0.12"
