[package]
name = "rnb-backend-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
half = "2"
rnb-backend-api = { path = "../api" }
rnb-core = { path = "../../rnb-core" }
rnb-loader = { path = "../../rnb-loader" }
rnb-memory = { path = "../../rnb-memory" }
rnb-platform = { path = "../../rnb-platform" }

[dev-dependencies]
rnb-cpu = { path = "../../rnb-cpu" }
