[package]
name = "rnb-dev-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cpu"]
cpu = ["rnb-llm/cpu"]
vulkan = ["rnb-llm/vulkan", "dep:rnb-backend-vulkan"]
cuda = ["rnb-llm/cuda"]
opencl = ["rnb-llm/opencl"]
metal = ["rnb-llm/metal"]
mediatek = [
    "dep:rnb-backend-mediatek",
    "dep:rnb-runtime",
    "rnb-llm/mediatek",
    "rnb-runtime/mediatek",
]

[dependencies]
rnb-core = { path = "../../rnb-core" }
rnb-cpu = { path = "../../rnb-cpu" }
rnb-backend-mediatek = { path = "../../rnb-backend/mediatek", optional = true }
rnb-backend-vulkan = { path = "../../rnb-backend/vulkan", optional = true }
rnb-llm = { path = "../../rnb-llm" }
rnb-loader = { path = "../../rnb-loader" }
rnb-runtime = { path = "../../rnb-runtime", default-features = false, optional = true }
half = "2"
libc = "0.2"
memmap2 = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
sha2 = "0.10"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
io-uring = "0.7"
